source/project-maze/style.css
body {
  margin: 0;
  font-family: 'Cormorant Garamond', serif;
  font-size: 23px;
  line-height: 1.5em;
  color: white;
}

body main {
  padding-top: 35px;
  border-top: 5px solid black;
  border-bottom: 5px solid black;
  background-color: #002b2b;
  background: url("img/bg.jpg") no-repeat center;
  background-size: cover;
}

.page-header {
  padding: 10px;
  background: #003b3b;
}

.page-header h1 {
  text-align: center;
}

button.fone-music {
  font-family: inherited;
  margin-left: 20px;
  float: left;
  background-color: yellow;
  padding: 10px;
  border-radius: 5px;
}

button.fone-music:hover {
  background-color: gold;
  cursor: pointer;
}

button.fone-music:active {
  background-color: #28513C;
}

.description {
  padding: 5px 30px;
  background-color: rgba(47, 79, 79, 0.8);
  border-radius: 10px;
}

div.maze-wrapper {
  width: 800px;
  margin: 50px auto;
  padding: 20px 0;
  background: #28513C;
  border: 1px solid black;
  border-radius: 10px;
}

.maze-cell {
  text-align: center;
  vertical-align: middle;
}

.maze-cell img {
  margin: 0 auto;
}


.maze-cell:hover {
  background-color: RosyBrown;
}

.maze-cell.attainable:hover {
  background: steelblue;
}

.maze-cell.current:hover {
  background-color: gray;
}

.page-footer {
  padding: 5px;
  background: #002b2b;
}

.page-footer a {
  text-decoration: none;
  color: white;
}

.page-footer a:hover {
  text-decoration: underline;
  color: yellow;
}

.layout-positioner {
  width: 800px;
  margin: 0 auto;
}

.copyright {
  float: left;
}

.contacts-footer {
  float: right;
}

.clearfix::after {
  content: "";
  display: table;
  clear: both;
}

main h2 {
  text-align: center;
}

.description p:first-of-type::first-letter {
  font-size: 50px;
  float: left;
  margin-right: 1px;
}

.description p:not(:first-of-type)::first-letter {
  margin-left: 35px;
}

.maze-wrapper .console {
  color: gray;
  margin-bottom: 20px;
  background-color: rgba(0, 0, 0, 0.4);
}

.console p {
  margin: 0px;
  margin-left: 20px;
  margin-right: 10px;
}

.console p:last-child {
  color: yellow;
}

.stats {
  padding-left: 10px;
  margin-top: 50px;
  margin-right: 20px;
  width: 220px;
  float: right;
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 10px;
}

.stats h3 {
  text-align: center;
}

.stats output {
  color: yellow;
  font-size: 1.5em;
}

div.menu {
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
}

button.menu-option {
  padding: 5px 20px;
  font-family: inherited;
  font-size: 1em;
  border-radius: 10px;
  background-color: yellow;
}

button.menu-option:hover {
  background-color: gold;
  cursor: pointer;
}

button.menu-option.next-level {
  display: none;
}

.avatars-list {
  margin-bottom: 20px;
  padding: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.avatar {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 130px;
  margin-left: 10px;
  margin-bottom: 10px;
  background-color: gray;
  border: 3px solid green;
  border-radius: 5px;
}

.avatar:hover {
  cursor: pointer;
  border: 3px solid lightgreen;
  background-color: #b0b0b0;
}

.avatar.selected {
  width: 120px;
  height: 150px;
  border: 4px solid gold;
  background-color: steelblue;
}

.avatar img {
  width: 100px;
}

.avatar:hover img {
  width: 120px;
}

.avatar.selected img {
  width: 120px;
}

